# ruby-hud

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
can/: MX5ND_HSCAN.dbc  README.md
carplay/: README.md  package.json  probe.js
deploy/: can0.service  fix-updater-queue.sh  install.sh  ruby-capture.service  ruby-rollback.service  ruby-updated  ruby-updated.path  ruby-updated.service  rubyhud-health.conf  rubyhud.service  rubymirror.service  rubysat.service  rubyvision.service  satdriver.service  setup-sat.sh  setup-vision.sh  setup.sh  tmpfiles-ruby-update.conf
deploy/polkit/: 50-ruby-netdev-nm.rules
deploy/sudoers.d/: rubyhud-vision
docs/: UPDATING.md  grok-app-prompt-spec.md
esp-remote/roof-remote/: roof-remote.ino
hud/rubyhud/: __init__.py  __main__.py  actuator.py  bluetoothpage.py  body_overlay.py  bodycar.py  btnet.py  config.py  framebuffer.py  gauges.py  gps.py  keyboard.py  menu.py  mirror.py  pages.py  playback.py  recorder.py  render.py  safety.py  satdriver.py  satframe.py  settings.py  signals.py  simdrive.py  test_safety.py  theme.py  touch.py  updates.py  visionctl.py  wifinet.py  wifipage.py
hud/rubyhud/assets/car/: README.md
qualia/: README.md
qualia/rubysat-display/: lv_conf.h  menu_ui.cpp  menu_ui.h  netlink.cpp  netlink.h  panel.cpp  panel.h  platformio.ini  rubysat-display.ino  secrets.h.example  touch.h  ui.cpp  ui.h
qualia/satdisplay/: satdisplay.ino  touch.h
sat/: pyproject.toml
sat/rubysat/: __init__.py  __main__.py  publisher.py  serial_link.py  seriallink.py  state.py  wifi.py
tools/: blender_render_rf.py
tools/can-capture/: README.md  capture.sh  diff-frames.py  find-bitrate.sh  lin-capture.py  setup-buses.sh
ups/: README.md  pyproject.toml
ups/rubyups/: __init__.py  __main__.py  config.py  monitor.py  spc.py
vision/: profile_pipeline.py  pyproject.toml
vision/rubyvision/: __init__.py  __main__.py  annotate.py  detector.py  pipeline.py  publisher.py  sources.py
